# dot-local-dns

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.github/: dependabot.yml
examples/: bad-requests.rs  query_load_test.rs
resources/: Icon.afdesign  records.txt
src/: app_config.rs  autolaunch_manager.rs  constants.rs  logging.rs  main.rs  shared.rs  tray_app.rs
src/dns/: config.rs  mod.rs  protocol.rs  records.rs
