[package]
name = "dot-local-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "fs", "net", "macros", "sync", "rt-multi-thread"] }
anyhow = "1.0"
dirs = "6"
log = "0.4.26"
flexi_logger = { version = "0.29.8", default-features = false }
image = "0.25.5"
notify-rust = "4.11"
tray-icon = { version = "0.20.0", default-features = false }
winit = { version = "0.30", features = ["rwh_06"], default-features = false }
failsafe = "1.3.0"
open = "5.3.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Networking_WinSock", "Win32_System_IO"] }

[dev-dependencies]
tokio = { version = "1", features = ["time"] }
tempfile = "3"

[build-dependencies]
winres = "0.1"

[package.metadata.packager]
name = "dot-local-dns"
product-name = "DotLocal-DNS"
identifier = "dev.babysnakes.dot-local-dns"
version = "0.1.0"
resources = ["resources/*.png", "resources/*.ico"]
icons = ["resources/*.ico"]
out-dir = "./dist"
before-packaging-command = "cargo build --release"
formats = ["nsis", "wix"]

[package.metadata.packager.nsis]
installer_icon = "resources/Icon.ico"
