[package]
name = "dot-local-dns"
version = "0.2.1-beta"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "fs", "net", "macros", "sync", "rt-multi-thread"] }
anyhow = "1.0"
dirs = "6"
log = "0.4.26"
flexi_logger = { version = "0.31.7", default-features = false }
image = "0.25.5"
notify-rust = "4.11"
tray-icon = { version = "0.21.1", default-features = false }
winit = { version = "0.30", features = ["rwh_06"], default-features = false }
failsafe = "1.3.0"
open = "5.3.2"
serde = { version = "1.0", features = ["derive"]}
toml = "0.9.7"
auto-launch = "0.5"
tinyfiledialogs = "3.9"
windows-sys = { version = "0.61.1", features = ["Win32_Networking_WinSock", "Win32_System_IO", "Win32_UI_WindowsAndMessaging"] }
windows-strings = "0.5.0"
regex = "1.11.3"

[dev-dependencies]
tokio = { version = "1", features = ["time"] }
tempfile = "3"
fake = "4"
clap = { version = "4", features = ["derive"]}
rand = "0.9"
rand_regex = "0.18"
hickory-resolver = "0.25"

[build-dependencies]
winres = "0.1"

[package.metadata.packager]
product-name = "DotLocal-DNS"
identifier = "dev.babysnakes.dot-local-dns"
resources = ["resources/*.png", "resources/*.ico"]
icons = ["resources/*.ico"]
out-dir = "./dist"
before-packaging-command = "cargo build --release"

[package.metadata.packager.nsis]
installer_icon = "resources/Icon.ico"
template = "build/installer.nsi"
#appdata-paths = ["$APPDATA/$PRODUCTNAME"]